--- a/todo-today-front-end/src/components/to-do-form/form.scss
+++ b/todo-today-front-end/src/components/to-do-form/form.scss
@@ -1,6 +1,4 @@
 .form-wrapper{
-    border-top: 1px solid yellow;
-    border-bottom: 1px solid yellow;
     padding: 1rem;
     h1 {
         text-align: center;
